--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "dependencies": {
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-scripts": "1.0.13"
+    "react-scripts": "1.0.13",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+
   },
   "scripts": {
     "start": "react-scripts start",
